# mango-analyse

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  IMPROVEMENT_PLAN_FOR_CODEX.md  KNOWLEDGE_BASE_CLAUDE_VS_CODEX_DIFF_2026-05-17.md  Makefile  Mango_Analyse_TZ_X_Analyze_Refactor_2026-05-14.md  Mango_Analyse_TZ_X_v2.1_Delta_2026-05-15.md  Mango_Analyse_TZ_X_v2_Analyze_Refactor_2026-05-14.md  Mango_Analyse_TZ_X_v3_Analyze_Refactor_2026-05-15.md  Mango_Analyse_TZ_Y_Sanitizer_Quality_Fixes_2026-05-14.md  Mango_Analyse_TZ_Y_v2_Sanitizer_Quality_2026-05-14.md  Mango_Analyse_TZ_Y_v3.1_Sanitizer_Quality_2026-05-15.md  Mango_Analyse_TZ_Y_v3_Delta_2026-05-15.md  Mango_Analyse_TZ_Z_Hygiene_Infrastructure_2026-05-14.md  Mango_Analyse_TZ_Z_v2_Hygiene_2026-05-15.md  Mango_Analyse_TZ_Z_v3.1_Hygiene_2026-05-15.md  Mango_Analyse_TZ_Z_v3_Delta_2026-05-15.md  PROJECT_HISTORY.md  README.md  TZ_FULL_VISION_2026-05-01.md  bot_control.sample.json  bot_control_panel.html  pyproject.toml  requirements-local-dual-asr.txt  requirements-local-whisper.txt  requirements.txt  scenarios_half1.jsonl
Claude Cowork Space/: 00_START_HERE.md  01_NEXT_STEP_AND_PARALLEL_PLAN.md  ИНСТРУКЦИЯ_ДМИТРИЮ.md
D1_audit_backlog/: ADDENDUM_round5_044151_for_codex.md  ADDENDUM_round5_humanity_123811_for_codex.md  ADR_001_output_verifier_route_disambiguation_2026-06-05.md  ADVICE_LIVE_AREAS_2026-05-25.md  ANALYSIS_wave2_phaseA_input_understanding_2026-06-08.md  ARCHITECTURE_root_flaw_2026-05-26.md  ARCH_DESIGN_llm_first_2026-05-26.md  AUDIT_SKILLS_for_codex_global_2026-05-26.md  (+371 more)
audits/: README.md
(+3397 files in other folders)
